--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,34 @@
-# Logs
-logs
-*.log
+# build output
+dist/
+
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# environment variables
+.env
+.env.production
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# macOS-specific files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# Articles
-/articles
+# jetbrains setting folder
+.idea/
 
-# Images
-/images/
-*/js/images
-images.js
-js/tabs.js
-*.png
-./public/favicons
-logo.svg
-*.ico
+# folders
+public/
+src/data
+.vscode
+src/pages/articles
+
+# components
+
+src/components/Logo.astro
