--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "v3",
-  "private": true,
-  "version": "3.0.0",
+  "name": "v4",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "sass": "sass --no-source-map ./sass/mystyles.scss:style.css"
-  },
-  "devDependencies": {
-    "sass": "^1.67.0",
-    "vite": "^4.4.5"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "bulma": "^0.9.4"
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/mdx": "^3.1.7",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.1",
+    "@fontsource/gelasio": "^5.1.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.15.9",
+    "astro-cloudinary": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "eslint": "^9.11.1",
+    "eslint-plugin-astro": "^1.2.4"
   }
 }
